src/query/parser/QueryParser.js
// Generated from schemas/Query.g4 by ANTLR 4.5
// jshint ignore: start
var antlr4 = require('antlr4/index');
var QueryListener = require('./QueryListener').QueryListener;
var grammarFileName = "Query.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "'('", "')'", "'host'", "'service'", "'state'", 
                     "'description'", "'metric_f'", "'metric'", "'ttl'", 
                     "'time'", "'and'", "'or'", "'not'", "'=~'", "'~='", 
                     "'!='", "'='", "'<'", "'<='", "'>'", "'>='", "'tagged'", 
                     'null', 'null', 'null', 'null', "'true'", "'false'" ];

var symbolicNames = [ 'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', "AND", "OR", "NOT", 
                      "APPROXIMATELY", "REGEX_MATCH", "NOT_EQUAL", "EQUAL", 
                      "LESSER", "LESSER_EQUAL", "GREATER", "GREATER_EQUAL", 
                      "TAGGED", "STRING", "FLOAT", "INT", "NIL", "TRUE", 
                      "FALSE", "WS" ];

var ruleNames =  [ "predicate", "or", "and", "not", "primary", "simple", 
                   "tagged", "equal", "not_equal", "lesser", "greater", 
                   "lesser_equal", "greater_equal", "like", "regex_match", 
                   "ws", "field", "value", "string", "v_boolean", "v_true", 
                   "v_false", "nil", "number", "v_float", "v_int" ];

function QueryParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

QueryParser.prototype = Object.create(antlr4.Parser.prototype);
QueryParser.prototype.constructor = QueryParser;

Object.defineProperty(QueryParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

QueryParser.EOF = antlr4.Token.EOF;
QueryParser.T__0 = 1;
QueryParser.T__1 = 2;
QueryParser.T__2 = 3;
QueryParser.T__3 = 4;
QueryParser.T__4 = 5;
QueryParser.T__5 = 6;
QueryParser.T__6 = 7;
QueryParser.T__7 = 8;
QueryParser.T__8 = 9;
QueryParser.T__9 = 10;
QueryParser.AND = 11;
QueryParser.OR = 12;
QueryParser.NOT = 13;
QueryParser.APPROXIMATELY = 14;
QueryParser.REGEX_MATCH = 15;
QueryParser.NOT_EQUAL = 16;
QueryParser.EQUAL = 17;
QueryParser.LESSER = 18;
QueryParser.LESSER_EQUAL = 19;
QueryParser.GREATER = 20;
QueryParser.GREATER_EQUAL = 21;
QueryParser.TAGGED = 22;
QueryParser.STRING = 23;
QueryParser.FLOAT = 24;
QueryParser.INT = 25;
QueryParser.NIL = 26;
QueryParser.TRUE = 27;
QueryParser.FALSE = 28;
QueryParser.WS = 29;

QueryParser.RULE_predicate = 0;
QueryParser.RULE_or = 1;
QueryParser.RULE_and = 2;
QueryParser.RULE_not = 3;
QueryParser.RULE_primary = 4;
QueryParser.RULE_simple = 5;
QueryParser.RULE_tagged = 6;
QueryParser.RULE_equal = 7;
QueryParser.RULE_not_equal = 8;
QueryParser.RULE_lesser = 9;
QueryParser.RULE_greater = 10;
QueryParser.RULE_lesser_equal = 11;
QueryParser.RULE_greater_equal = 12;
QueryParser.RULE_like = 13;
QueryParser.RULE_regex_match = 14;
QueryParser.RULE_ws = 15;
QueryParser.RULE_field = 16;
QueryParser.RULE_value = 17;
QueryParser.RULE_string = 18;
QueryParser.RULE_v_boolean = 19;
QueryParser.RULE_v_true = 20;
QueryParser.RULE_v_false = 21;
QueryParser.RULE_nil = 22;
QueryParser.RULE_number = 23;
QueryParser.RULE_v_float = 24;
QueryParser.RULE_v_int = 25;

function PredicateContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_predicate;
    return this;
}

PredicateContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PredicateContext.prototype.constructor = PredicateContext;

PredicateContext.prototype.or = function() {
    return this.getTypedRuleContext(OrContext,0);
};

PredicateContext.prototype.EOF = function() {
    return this.getToken(QueryParser.EOF, 0);
};

PredicateContext.prototype.enterRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.enterPredicate(this);
	}
};

PredicateContext.prototype.exitRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.exitPredicate(this);
	}
};




QueryParser.PredicateContext = PredicateContext;

QueryParser.prototype.predicate = function() {

    var localctx = new PredicateContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, QueryParser.RULE_predicate);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 52;
        this.or();
        this.state = 53;
        this.match(QueryParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function OrContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_or;
    return this;
}

OrContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OrContext.prototype.constructor = OrContext;

OrContext.prototype.and = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AndContext);
    } else {
        return this.getTypedRuleContext(AndContext,i);
    }
};

OrContext.prototype.ws = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WsContext);
    } else {
        return this.getTypedRuleContext(WsContext,i);
    }
};

OrContext.prototype.OR = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(QueryParser.OR);
    } else {
        return this.getToken(QueryParser.OR, i);
    }
};


OrContext.prototype.enterRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.enterOr(this);
	}
};

OrContext.prototype.exitRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.exitOr(this);
	}
};




QueryParser.OrContext = OrContext;

QueryParser.prototype.or = function() {

    var localctx = new OrContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, QueryParser.RULE_or);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 55;
        this.and();
        this.state = 63;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===QueryParser.OR || _la===QueryParser.WS) {
            this.state = 56;
            this.ws();
            this.state = 57;
            this.match(QueryParser.OR);
            this.state = 58;
            this.ws();
            this.state = 59;
            this.and();
            this.state = 65;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AndContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_and;
    return this;
}

AndContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AndContext.prototype.constructor = AndContext;

AndContext.prototype.not = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(NotContext);
    } else {
        return this.getTypedRuleContext(NotContext,i);
    }
};

AndContext.prototype.primary = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(PrimaryContext);
    } else {
        return this.getTypedRuleContext(PrimaryContext,i);
    }
};

AndContext.prototype.ws = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WsContext);
    } else {
        return this.getTypedRuleContext(WsContext,i);
    }
};

AndContext.prototype.AND = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(QueryParser.AND);
    } else {
        return this.getToken(QueryParser.AND, i);
    }
};


AndContext.prototype.enterRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.enterAnd(this);
	}
};

AndContext.prototype.exitRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.exitAnd(this);
	}
};




QueryParser.AndContext = AndContext;

QueryParser.prototype.and = function() {

    var localctx = new AndContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, QueryParser.RULE_and);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 68;
        switch(this._input.LA(1)) {
        case QueryParser.NOT:
            this.state = 66;
            this.not();
            break;
        case QueryParser.T__0:
        case QueryParser.T__2:
        case QueryParser.T__3:
        case QueryParser.T__4:
        case QueryParser.T__5:
        case QueryParser.T__6:
        case QueryParser.T__7:
        case QueryParser.T__8:
        case QueryParser.T__9:
        case QueryParser.TAGGED:
        case QueryParser.TRUE:
        case QueryParser.FALSE:
            this.state = 67;
            this.primary();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 79;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 70;
                this.ws();
                this.state = 71;
                this.match(QueryParser.AND);
                this.state = 72;
                this.ws();
                this.state = 75;
                switch(this._input.LA(1)) {
                case QueryParser.NOT:
                    this.state = 73;
                    this.not();
                    break;
                case QueryParser.T__0:
                case QueryParser.T__2:
                case QueryParser.T__3:
                case QueryParser.T__4:
                case QueryParser.T__5:
                case QueryParser.T__6:
                case QueryParser.T__7:
                case QueryParser.T__8:
                case QueryParser.T__9:
                case QueryParser.TAGGED:
                case QueryParser.TRUE:
                case QueryParser.FALSE:
                    this.state = 74;
                    this.primary();
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
                } 
            }
            this.state = 81;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function NotContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_not;
    return this;
}

NotContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NotContext.prototype.constructor = NotContext;

NotContext.prototype.NOT = function() {
    return this.getToken(QueryParser.NOT, 0);
};

NotContext.prototype.ws = function() {
    return this.getTypedRuleContext(WsContext,0);
};

NotContext.prototype.not = function() {
    return this.getTypedRuleContext(NotContext,0);
};

NotContext.prototype.primary = function() {
    return this.getTypedRuleContext(PrimaryContext,0);
};

NotContext.prototype.enterRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.enterNot(this);
	}
};

NotContext.prototype.exitRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.exitNot(this);
	}
};




QueryParser.NotContext = NotContext;

QueryParser.prototype.not = function() {

    var localctx = new NotContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, QueryParser.RULE_not);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 82;
        this.match(QueryParser.NOT);
        this.state = 83;
        this.ws();
        this.state = 86;
        switch(this._input.LA(1)) {
        case QueryParser.NOT:
            this.state = 84;
            this.not();
            break;
        case QueryParser.T__0:
        case QueryParser.T__2:
        case QueryParser.T__3:
        case QueryParser.T__4:
        case QueryParser.T__5:
        case QueryParser.T__6:
        case QueryParser.T__7:
        case QueryParser.T__8:
        case QueryParser.T__9:
        case QueryParser.TAGGED:
        case QueryParser.TRUE:
        case QueryParser.FALSE:
            this.state = 85;
            this.primary();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PrimaryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_primary;
    return this;
}

PrimaryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrimaryContext.prototype.constructor = PrimaryContext;

PrimaryContext.prototype.or = function() {
    return this.getTypedRuleContext(OrContext,0);
};

PrimaryContext.prototype.simple = function() {
    return this.getTypedRuleContext(SimpleContext,0);
};

PrimaryContext.prototype.enterRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.enterPrimary(this);
	}
};

PrimaryContext.prototype.exitRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.exitPrimary(this);
	}
};




QueryParser.PrimaryContext = PrimaryContext;

QueryParser.prototype.primary = function() {

    var localctx = new PrimaryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, QueryParser.RULE_primary);
    try {
        this.state = 93;
        switch(this._input.LA(1)) {
        case QueryParser.T__0:
            this.enterOuterAlt(localctx, 1);
            this.state = 88;
            this.match(QueryParser.T__0);
            this.state = 89;
            this.or();
            this.state = 90;
            this.match(QueryParser.T__1);
            break;
        case QueryParser.T__2:
        case QueryParser.T__3:
        case QueryParser.T__4:
        case QueryParser.T__5:
        case QueryParser.T__6:
        case QueryParser.T__7:
        case QueryParser.T__8:
        case QueryParser.T__9:
        case QueryParser.TAGGED:
        case QueryParser.TRUE:
        case QueryParser.FALSE:
            this.enterOuterAlt(localctx, 2);
            this.state = 92;
            this.simple();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SimpleContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_simple;
    return this;
}

SimpleContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SimpleContext.prototype.constructor = SimpleContext;

SimpleContext.prototype.tagged = function() {
    return this.getTypedRuleContext(TaggedContext,0);
};

SimpleContext.prototype.equal = function() {
    return this.getTypedRuleContext(EqualContext,0);
};

SimpleContext.prototype.not_equal = function() {
    return this.getTypedRuleContext(Not_equalContext,0);
};

SimpleContext.prototype.lesser = function() {
    return this.getTypedRuleContext(LesserContext,0);
};

SimpleContext.prototype.greater = function() {
    return this.getTypedRuleContext(GreaterContext,0);
};

SimpleContext.prototype.lesser_equal = function() {
    return this.getTypedRuleContext(Lesser_equalContext,0);
};

SimpleContext.prototype.greater_equal = function() {
    return this.getTypedRuleContext(Greater_equalContext,0);
};

SimpleContext.prototype.like = function() {
    return this.getTypedRuleContext(LikeContext,0);
};

SimpleContext.prototype.regex_match = function() {
    return this.getTypedRuleContext(Regex_matchContext,0);
};

SimpleContext.prototype.v_boolean = function() {
    return this.getTypedRuleContext(V_booleanContext,0);
};

SimpleContext.prototype.enterRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.enterSimple(this);
	}
};

SimpleContext.prototype.exitRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.exitSimple(this);
	}
};




QueryParser.SimpleContext = SimpleContext;

QueryParser.prototype.simple = function() {

    var localctx = new SimpleContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, QueryParser.RULE_simple);
    try {
        this.state = 105;
        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 95;
            this.tagged();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 96;
            this.equal();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 97;
            this.not_equal();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 98;
            this.lesser();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 99;
            this.greater();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 100;
            this.lesser_equal();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 101;
            this.greater_equal();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 102;
            this.like();
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 103;
            this.regex_match();
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 104;
            this.v_boolean();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TaggedContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_tagged;
    return this;
}

TaggedContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TaggedContext.prototype.constructor = TaggedContext;

TaggedContext.prototype.TAGGED = function() {
    return this.getToken(QueryParser.TAGGED, 0);
};

TaggedContext.prototype.ws = function() {
    return this.getTypedRuleContext(WsContext,0);
};

TaggedContext.prototype.string = function() {
    return this.getTypedRuleContext(StringContext,0);
};

TaggedContext.prototype.enterRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.enterTagged(this);
	}
};

TaggedContext.prototype.exitRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.exitTagged(this);
	}
};




QueryParser.TaggedContext = TaggedContext;

QueryParser.prototype.tagged = function() {

    var localctx = new TaggedContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, QueryParser.RULE_tagged);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 107;
        this.match(QueryParser.TAGGED);
        this.state = 108;
        this.ws();
        this.state = 109;
        this.string();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EqualContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_equal;
    return this;
}

EqualContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EqualContext.prototype.constructor = EqualContext;

EqualContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

EqualContext.prototype.ws = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WsContext);
    } else {
        return this.getTypedRuleContext(WsContext,i);
    }
};

EqualContext.prototype.EQUAL = function() {
    return this.getToken(QueryParser.EQUAL, 0);
};

EqualContext.prototype.value = function() {
    return this.getTypedRuleContext(ValueContext,0);
};

EqualContext.prototype.enterRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.enterEqual(this);
	}
};

EqualContext.prototype.exitRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.exitEqual(this);
	}
};




QueryParser.EqualContext = EqualContext;

QueryParser.prototype.equal = function() {

    var localctx = new EqualContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, QueryParser.RULE_equal);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 111;
        this.field();
        this.state = 112;
        this.ws();
        this.state = 113;
        this.match(QueryParser.EQUAL);
        this.state = 114;
        this.ws();
        this.state = 115;
        this.value();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Not_equalContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_not_equal;
    return this;
}

Not_equalContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Not_equalContext.prototype.constructor = Not_equalContext;

Not_equalContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

Not_equalContext.prototype.ws = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WsContext);
    } else {
        return this.getTypedRuleContext(WsContext,i);
    }
};

Not_equalContext.prototype.NOT_EQUAL = function() {
    return this.getToken(QueryParser.NOT_EQUAL, 0);
};

Not_equalContext.prototype.value = function() {
    return this.getTypedRuleContext(ValueContext,0);
};

Not_equalContext.prototype.enterRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.enterNot_equal(this);
	}
};

Not_equalContext.prototype.exitRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.exitNot_equal(this);
	}
};




QueryParser.Not_equalContext = Not_equalContext;

QueryParser.prototype.not_equal = function() {

    var localctx = new Not_equalContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, QueryParser.RULE_not_equal);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 117;
        this.field();
        this.state = 118;
        this.ws();
        this.state = 119;
        this.match(QueryParser.NOT_EQUAL);
        this.state = 120;
        this.ws();
        this.state = 121;
        this.value();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function LesserContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_lesser;
    return this;
}

LesserContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LesserContext.prototype.constructor = LesserContext;

LesserContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

LesserContext.prototype.ws = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WsContext);
    } else {
        return this.getTypedRuleContext(WsContext,i);
    }
};

LesserContext.prototype.LESSER = function() {
    return this.getToken(QueryParser.LESSER, 0);
};

LesserContext.prototype.number = function() {
    return this.getTypedRuleContext(NumberContext,0);
};

LesserContext.prototype.enterRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.enterLesser(this);
	}
};

LesserContext.prototype.exitRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.exitLesser(this);
	}
};




QueryParser.LesserContext = LesserContext;

QueryParser.prototype.lesser = function() {

    var localctx = new LesserContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, QueryParser.RULE_lesser);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 123;
        this.field();
        this.state = 124;
        this.ws();
        this.state = 125;
        this.match(QueryParser.LESSER);
        this.state = 126;
        this.ws();
        this.state = 127;
        this.number();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function GreaterContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_greater;
    return this;
}

GreaterContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
GreaterContext.prototype.constructor = GreaterContext;

GreaterContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

GreaterContext.prototype.ws = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WsContext);
    } else {
        return this.getTypedRuleContext(WsContext,i);
    }
};

GreaterContext.prototype.GREATER = function() {
    return this.getToken(QueryParser.GREATER, 0);
};

GreaterContext.prototype.number = function() {
    return this.getTypedRuleContext(NumberContext,0);
};

GreaterContext.prototype.enterRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.enterGreater(this);
	}
};

GreaterContext.prototype.exitRule = function(listener) {
    if(listener instanceof QueryListener ) {
        listener.exitGreater(this);
	}
};




QueryParser.GreaterContext = GreaterContext;

QueryParser.prototype.greater = function() {

    var localctx = new GreaterContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, QueryParser.RULE_greater);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 129;
        this.field();
        this.state = 130;
        this.ws();
        this.state = 131;
        this.match(QueryParser.GREATER);
        this.state = 132;
        this.ws();
        this.state = 133;
        this.number();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Lesser_equalContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QueryParser.RULE_lesser_equal;
    return this;
}

Lesser_equalContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Lesser_equalContext.prototype.constructor = Lesser_equalContext;

Lesser_equalContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

Lesser_equalContext.prototype.ws = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WsContext);
    } else {
        return this.getTypedRuleContext(WsContext,i);
    }
};
